welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: type mismatch;
 found   : Unit
 required: Int
if (a==b && b==c && a==2) {
^