welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
if (a==b && b==c && a==2) {
	return 10
}


}